processed/gerrit/txt/35284.txt
Change:     35284
Subject:    LU-12447 utils: specify correct size for lfs project buffer
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/35284
Change-Id:  Ia6429c47391bf503546609ec6a262fe24664bdd4
Project:    fs/lustre-release
Branch:     b2_12
Status:     MERGED
Owner:      Jian Yu
Created:    2019-06-21 06:30:38.000000000
Updated:    2019-07-03 03:24:10.000000000
Patch Set:  2
Insertions: +1
Deletions:  -1
Comments:   0 (0 unresolved)
Topic:      LTS12

--- Labels ---
  Code-Review: Wang Shilong: +1; James Simmons: +1; Oleg Drokin: +2
  Verified: Maloo: +1

--- Reviewers ---
  REVIEWER: Jenkins, Oleg Drokin, James Simmons, Wang Shilong, Gu Zheng

--- Commit Message ---
LU-12447 utils: specify correct size for lfs project buffer

Enviorment:
Fedora release 28 (Twenty Eight)

gcc (GCC) 8.0.1 20180324 (Red Hat 8.0.1-0.20)
Copyright (C) 2018 Free Software Foundation, Inc.

Hit build failure:
lfs_project.c: In function ‘lfs_project_item_alloc’:
lfs_project.c:72:2: error: ‘strncpy’ specified bound 4096
equals destination size [-Werror=stringop-truncation]
  strncpy(lpi->lpi_pathname, pathname, sizeof(lpi->lpi_pathname));
  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

This patch is back-ported from the following one:
Lustre-commit: ffef6e3271ad1136d3ab1c2ee229b4690a6722a0
Lustre-change: https://review.whamcloud.com/35257

Test-Parameters: trivial testlist=sanity-quota
Change-Id: Ia6429c47391bf503546609ec6a262fe24664bdd4
Signed-off-by: Wang Shilong <wshilong@ddn.com>
Reviewed-by: James Simmons <uja.ornl@yahoo.com>
Reviewed-by: Gu Zheng <gzheng@ddn.com>
Reviewed-on: https://review.whamcloud.com/35284
Tested-by: Jenkins
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>

--- Review History ---

--- Message (Jian Yu, 2019-06-21 06:30:38.000000000) ---
Uploaded patch set 1.

--- Message (Wang Shilong, 2019-06-21 06:31:15.000000000) ---
Patch Set 1: Code-Review+1

--- Message (wc-checkpatch, 2019-06-21 06:34:46.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (Jenkins, 2019-06-21 07:03:27.000000000) ---
Patch Set 1: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews-patchless/6197/ : SUCCESS

https://build.whamcloud.com/job/lustre-reviews/65937/ : SUCCESS

--- Message (Autotest, 2019-06-21 07:04:25.000000000) ---
Patch Set 1:

Trevis Autotest started enforced custom session for build 65937. The following test parameters were specified: trivial=true testlist=sanity-quota.

--- Message (Autotest, 2019-06-21 07:04:25.000000000) ---
Patch Set 1:

Trevis Autotest started enforced review-ldiskfs-dne session for build 65937.

--- Message (Minh Diep, 2019-06-28 17:34:55.000000000) ---
Topic set to LTS12

--- Message (James Simmons, 2019-07-01 15:21:22.000000000) ---
Patch Set 1: Code-Review+1

--- Message (Oleg Drokin, 2019-07-03 03:24:08.000000000) ---
Patch Set 1: Code-Review+2

--- Message (unknown, 2019-07-03 03:24:10.000000000) ---
Change has been successfully cherry-picked as a7614e22b431ae3f288ab5e393dbac5a0235f5f5 by Oleg Drokin
